[package]
name = "dss-proj"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version = "0.34.5"
default-features = false
features = ["ttf", "image"]

[dependencies.reqwest]
version = "0.11.4"
features = ["json", "blocking", "serde_json"]

[dependencies.serde_json]
version = "1.0.59"